enhancement: don't show customer sensible data for regular users and store all requested views of such users in transaction log; new permission 'customer_sensible_data' allows to disable this mechanism for selected users (small performance optimalisation)

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -851,7 +851,7 @@
 			var btn = $(this);
 
 			$.ajax({
-				url: "?m=customerinfo&id={$customerinfo.id}&action=get_sensible_data",
+				url: "?m=customerinfo&api=1&id={$customerinfo.id}&action=get_sensible_data",
 				dataType: "json",
 				success: function(data) {
 					$('.customer-sensible-data[data-type]').each(function() {
