bugfix: small visual tweak

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -764,7 +764,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td>
+									<td class="valign-top">
 										{icon name="configuration"}
 									</td>
 									<td class="nobr valign-top">
