enhancement: 'commited'/'not commited' assignment filter in customer search form

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -492,6 +492,8 @@
 				<option value="-9">{trans('all suspended')}</option>
 				<option value="-6">{trans('waiting')}</option>
 				<option value="-8">{trans('waiting, without nodes')}</option>
+				<option value="-11">{trans("<!assignment>commited")}</option>
+				<option value="-12">{trans("<!assignment>not commited")}</option>
 			</select>
 			<input type="text" id="assignment-days" name="search[assignments]" value="" disabled required
 				size="5" placeholder="{trans("days")}" style="display: none;" pattern="[0-9]+">
