improvement: show warning when changing privacy status flag (variable: timetable.warn_privacy_status_change, default:false)

--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -1,6 +1,7 @@
 {extends file="layout.html"}
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
+{$warn_privacy_status_change = ConfigHelper::checkConfig('timetable.warn_privacy_status_change')}
 {$hide_disabled_users = ConfigHelper::checkConfig('timetable.hide_disabled_users', ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users'))}
 {$hide_deleted_users = ConfigHelper::checkConfig('timetable.hide_deleted_users', ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users'))}
 	<!--// $Id$ //-->
@@ -273,6 +274,12 @@
 
 		$(function() {
 			$('[name="event[title]"]').focus();
+
+			{if $warn_privacy_status_change}
+			$('input[type="checkbox"][name="event[private]"]').change(function () {
+				alertDialog($t('Warning! You have changed privacy status for this timetable event!'));
+			});
+			{/if}
 
 			$('[name="event[rtqueue]"]').change(function () {
 				var newticket_notify = $(this).find(':selected').attr('data-newticket-notify');
