--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -47,7 +47,7 @@
 		<span><br>{trans($_RT_TYPES[$ticket.type].label)}</span>
 	</TD>
 	<TD class="valign-middle">
-		<span class="bold">{$ticket.subject|trunescape:100|default:"&nbsp;"}</span>
+		<span class="bold" {tip text=$ticket.subject}>{$ticket.subject|trunescape:100|default:"&nbsp;"}</span>
 		{foreach $ticket.categories as $tc}
 			<a href="?m=rtqueueview&persistent-filter=-1&catid={$tc.categoryid}&s=-1&priority=all&unread=-1&o=lastmodified,desc">
 				<div class="lms-ui-category-label" style="{$tc.style}">
