enhancement: added SIDUSIS Maps link type, added variables: 'sidusis.web_url', 'sidusis.map_zoom_range' (default: 20)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -312,6 +312,15 @@
   }
 }
 
+.lms-ui-icon-location-sidusis {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-map;
+  }
+}
+
 .lms-ui-icon-search {
   .fa-icon;
   .fas;
