--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -293,6 +293,12 @@
 														streetid=$v.location_street
 														building_num=$v.location_house
 													}
+													{show_on_map_button
+														type='sidusis'
+														cityid=$v.location_city
+														streetid=$v.location_street
+														building_num=$v.location_house
+													}
 												</td>
 											</tr>
 											{break}
@@ -349,6 +355,12 @@
 														streetid=$v.location_street
 														building_num=$v.location_house
 													}
+                                                                                                        {show_on_map_button
+                                                                                                                type='sidusis'
+                                                                                                                cityid=$v.location_city
+                                                                                                                streetid=$v.location_street
+                                                                                                                building_num=$v.location_house
+                                                                                                        }
 												</td>
 											</tr>
 											{break}
@@ -413,6 +425,12 @@
 														streetid=$v.location_street
 														building_num=$v.location_house
 													}
+                                                                                                        {show_on_map_button
+                                                                                                                type='sidusis'
+                                                                                                                cityid=$v.location_city
+                                                                                                                streetid=$v.location_street
+                                                                                                                building_num=$v.location_house
+                                                                                                        }
 												</td>
 											</tr>
 										{/if}
