--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -566,7 +566,7 @@
 									</label>
 									<br>
 									<INPUT id="a-day-of-month" type="TEXT" name="{$variable_prefix}[at]"
-										value="{if $variables.at}{$variables.at}{/if}"
+										value="{if $variables.at}{$variables.at}{/if}" required
 										{tip text="Enter accounting time. For disposable accounting enter date in format YYYY/MM/DD, for weekly accounting enter day of week (Monday = 1), for monthly accounting enter day of month (1 to 28), for yearly accounting enter day and month in format DD/MM (15/09 means September 15th), for half-yearly DD/MM (MM <=6) and for quarterly DD/MM (MM <= 3)" trigger="at"}
 										{if $variables.at == 0 && $variables.at != ''} style="display: none;" disabled{/if}
 										SIZE="8">
