--- a/templates/default/event/eventlistfilter.html
+++ b/templates/default/event/eventlistfilter.html
@@ -32,28 +32,15 @@
 							<input type="hidden" name="userand" value="0">
 							<input type="checkbox" name="userand" value="1" onchange="document.filter.submit();"{if isset($filter.userand) && $filter.userand} checked{/if}>
 						</label>
-						<SELECT size="1" name="a[]" OnChange="document.filter.submit();"
-								class="lms-ui-multiselect lms-ui-multiselect-filter" multiple
-								data-default-value="{trans("— all —")}">
-							<OPTION value="-1" {if is_array($filter.userid) && in_array('-1', $filter.userid)} selected{/if}
-									data-exclusive>— {trans("unassigned")} —
-							</OPTION>
-							{foreach $userlist as $user}
-								{if (!is_array($filter.owner) || !in_array($user.id, $filter.owner))
-									&& ($hide_disabled_users && !$user.access
-										|| $hide_deleted_users && $user.deleted)}
-									{continue}
-								{else}
-									<option value="{$user.id}"
-										{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
-										{if !$user.access} data-blend{/if}
-										{if $user.deleted} data-crossed{/if}
-									>{strip}
-										{$user.rname|trunescape:40} ({$user.login})
-									{/strip}</option>
-								{/if}
-							{/foreach}
-						</SELECT>
+
+						{user_selection
+							elemname="a[]"
+							multiple=true
+							selected=$filter.userid
+							hideDisabled=$hide_disabled_users
+							hideDeleted=$hide_deleted_users
+						}
+
 						{trans("Privacy:")}
 						<SELECT name="privacy" onchange="document.filter.submit();">
 							<OPTION value="0"{if $filter.privacy == "0"} selected{/if}>{trans("— all —")}</OPTION>
