--- a/templates/default/user/useradd.html
+++ b/templates/default/user/useradd.html
@@ -155,7 +155,7 @@
 		<tr>
 			<td class="nobr">
 				{icon name="calendar"}
-				<strong>{trans("Account active:")}</strong>
+				<strong>{trans("Access date range")}</strong>
 			</td>
 			<td class="nobr">
 				{trans('from')}:
