html attr should be with "

--- a/templates/default/user/userlist.html
+++ b/templates/default/user/userlist.html
@@ -44,7 +44,7 @@
 		<TH scope="col">
 			<SPAN class="nobr">{trans("Phone")}</SPAN>
 		</TH>
-		<TH scope="col" colspan=2>
+		<TH scope="col" colspan="2">
 			<SPAN class="nobr">{trans("Access date range")}</SPAN>
 		</TH>
 		<TH scope="col">
