mark range dates outside allowed as red

--- a/templates/default/user/userlist.html
+++ b/templates/default/user/userlist.html
@@ -58,7 +58,7 @@
     <TBODY>
 	{foreach $userslist as $user}
 	{if $user.id}
-	<TR class="highlight{if !$user.accessinfo} blend{/if}" data-target-url="?m=userinfo&id={$user.id}" data-name="{$user.login}">
+	<TR class="highlight{if !$user.accessinfo || !$user.access} blend{/if}" data-target-url="?m=userinfo&id={$user.id}" data-name="{$user.login}">
 		<TD class="nobr bold">
 			{$user.login}
 		</TD>
@@ -68,10 +68,8 @@
 		<TD class="nobr">
 			{if $user.phone}{$user.phone}{else} - {/if}
 		</TD>
-		<td class="nobr">
-			{$user.accessfrom}
-		</td>
-		<td class="nobr">
+		<td class="nobr{if !$user.accessinfo} red{/if}">
+			{$user.accessfrom}<br>
 			{$user.accessto}
 		</td>
 		<TD class="nobr">
