bugfix: not all accounts without login access was greyed out, set unique field description (more elegant ui text label)

--- a/templates/default/user/useradd.html
+++ b/templates/default/user/useradd.html
@@ -155,7 +155,7 @@
 		<tr>
 			<td class="nobr">
 				{icon name="calendar"}
-				<strong>{trans("Access date range")}</strong>
+				<strong>{trans("Access period")}</strong>
 			</td>
 			<td class="nobr">
 				{trans('from')}:
