--- a/templates/default/user/userlist.html
+++ b/templates/default/user/userlist.html
@@ -45,7 +45,7 @@
 			<SPAN class="nobr">{trans("Phone")}</SPAN>
 		</TH>
 		<TH scope="col" colspan="2">
-			<SPAN class="nobr">{trans("Access date range")}</SPAN>
+			<SPAN class="nobr">{trans("Access period")}</SPAN>
 		</TH>
 		<TH scope="col">
 			<SPAN class="nobr">{trans("Last login:")}</SPAN>
