--- a/templates/default/user/userinfobox.html
+++ b/templates/default/user/userinfobox.html
@@ -140,7 +140,7 @@
 				{icon name="calendar"}
 			</td>
 			<td>
-				<strong>{trans("Access date range")}</strong>
+				<strong>{trans("Access period")}</strong>
 			</td>
 			<td>
 				{if $userinfo.accessfrom}<strong>{trans("from")}:</strong> {$userinfo.accessfrom}{/if}
