improvement: {user_selection} add support for required parm and some devel syntax changes

--- a/templates/default/event/eventlistfilter.html
+++ b/templates/default/event/eventlistfilter.html
@@ -37,8 +37,8 @@
 							elemname="a[]"
 							multiple=true
 							selected=$filter.userid
-							hideDisabled=$hide_disabled_users
-							hideDeleted=$hide_deleted_users
+							hide_disabled=$hide_disabled_users
+							hide_deleted=$hide_deleted_users
 						}
 
 						{trans("Privacy:")}
